log/build_2024-11-18_15-02-27/ros2_aruco/stderr.log
  File "/root/ros2_ws_diki_new/install/ros2_aruco/lib/python3.8/site-packages/ros2_aruco/aruco_node.py", line 51
    self.info_sub = self.create_subscription(CameraInfo, info_topic, self.info_callback, qos_profile_sensor_data)   =>
                                                                                                                     ^
SyntaxError: invalid syntax

